package com.springframework.context;

import com.springframework.beans.factory.ListableBeanFactory;

public interface ApplicationContext extends ListableBeanFactory {

}
